# wallfade

./: .gitignore  Jenkinsfile  Makefile  README.md  run.sh  wallfade.c  wallfade.ini.sample
src/: CMakeLists.txt  magick.h.in  wallfade.c  wallfade.c.in
src/cmake/: FindGraphicsMagick.cmake  FindIniparser.cmake
